package Problem_IV;

public interface Command {
    void execute();
    void undo();
}
